@@ -31,7 +31,7 @@ our @EXPORT_OK =
       is_square_free
       miller_rabin_random
       lucas_sequence lucasu lucasv
-      primes twin_primes ramanujan_primes
+      primes twin_primes ramanujan_primes sieve_prime_cluster
       forprimes forcomposites foroddcomposites fordivisors
       forpart forcomb forperm
       prime_iterator prime_iterator_object
@@ -1528,6 +1528,31 @@ like them, returns an array reference.
 
 Generating Ramanujan primes takes some effort, including overhead to cover
 a range.  This will be substantially slower than generating standard primes.
+
+=head2 sieve_prime_cluster
+
+  my @s = sieve_prime_cluster(1, 1e9, 2,6,8,12,18,20);
+
+Efficiently finds prime clusters between the first two arguments C<low>
+and C<high>.  The remainining arguments describe the cluster.  A cluster
+is a strictly increasing sequence of primes, not necessarily the minimal
+distance.  The cluster values must be even, less than 31 bits, and
+strictly increasing.  The returned values are the start of the cluster
+(C<p+0>).
+
+This function returns an array rather than an array reference.
+Typically the number of returned values is much lower than for
+other primes functions, so this uses the more convenient array
+return.  This function has an identical signature to the function
+of the same name in L<Math::Prime::Util:GMP>.
+
+The cluster is described as offsets from 0, with the implicit prime
+at 0.  Hence an empty list is asking for all primes (the cluster
+C<p+0>).  A list with the single value C<2> will find all twin primes
+(the cluster where C<p+0> and C<p+2> are prime).  The list C<2,6,8>
+will find prime quadruplets.  Note that there is no requirement that
+the list denote a constellation (a cluster with minimal distance) --
+the list C<42,92,606> is just fine.
 
 =head2 sum_primes
 
